<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">anet_s_application</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_j">J</string>
<string name="msg_cost_cannot_be">Cost cannot be zero</string>
<string name="lbl_k">Kč</string>
<string name="lbl_joseph_m_ller">Joseph Müller</string>
<string name="msg_you_have_receiv3">You have received an invitation to household from: Juliet Carmen</string>
<string name="lbl_members">Members</string>
<string name="msg_shared_apartmen">Shared apartment, 119 East Street</string>
<string name="lbl_expenses">Expenses</string>
<string name="msg_don_t_have_an_a">Don\u2019t have an account yet?</string>
<string name="msg_you_have_receiv2">You have received an invitation to household from: Christian Peterson</string>
<string name="msg_already_have_an">Already have an account?</string>
<string name="lbl_joshua_bassett">Joshua Bassett</string>
<string name="msg_requested_to_pa">Requested to pay</string>
<string name="msg_households_invi">Households invite</string>
<string name="msg_enter_your_pass">Enter your password...</string>
<string name="msg_enter_household_name">Enter household name...</string>
<string name="lbl_paid_by">Paid by</string>
<string name="lbl_sing_up">Sing up</string>
<string name="lbl_notifications">Notifications</string>
<string name="lbl_by_shares">By shares</string>
<string name="msg_last_update_13">Last update: 13.2.2023</string>
<string name="msg_franti_ek_pol_v">František Polívka is owed:
200 kč</string>
<string name="lbl_households">Households</string>
<string name="lbl_username">Username</string>
<string name="lbl_repeat_password">Repeat password</string>
<string name="msg_enter_expense_n">Enter expense name...</string>
<string name="msg_cristine_olive">Cristine Olive owes you:
 30 kč</string>
<string name="msg_badges_are_used">Badges are used to convey dynamic information, such as a count or status. A badge can include text, labels, or numbers. </string>
<string name="msg_franti_ek_pol_v3">František Polívka</string>
<string name="msg_franti_ek_pol_v2">František Polívka owes 953 kč</string>
<string name="msg_overall_you_ow">Overall, you owe 350 kč 
and are owed 150 kč</string>
<string name="msg_choose_icon_or">choose icon or 
upload your own image</string>
<string name="lbl_currency">Currency</string>
<string name="lbl_cost">Cost</string>
<string name="lbl_you_owe_630_k">You owe 630 kč</string>
<string name="lbl_supporting_text">Supporting text</string>
<string name="lbl_password">Password</string>
<string name="lbl_household_name">Household</string>
<string name="lbl_honza_nov">Honza Nový</string>
<string name="msg_nicol_thomas_gm">nicol.thomas@gmail.com</string>
<string name="lbl_you_paid_150_k">You paid 150 kč</string>
<string name="lbl_equally">Equally</string>
<string name="lbl_groceries">Groceries</string>
<string name="lbl_timezone">Timezone</string>
<string name="msg_cristine_olive2">Cristine Olive paid 50 kč</string>
<string name="msg_type_to_write_c">Type to write comment</string>
<string name="lbl_badges">Badges</string>
<string name="msg_cristine_olive3">Cristine Olive owes 267 kč</string>
<string name="msg_enter_your_username">Enter your username...</string>
<string name="msg_enter_your_pass2">Enter your password again...</string>
<string name="msg_water_electri">Water &amp; Electricity</string>
<string name="lbl_split">Split</string>
<string name="msg_you_have_receiv">You have received an invitation to household from: Nicol Little</string>
<string name="lbl_cristine_olive">Cristine Olive</string>
<string name="lbl_others">Others</string>
<string name="lbl_overview">Overview</string>
<string name="lbl_jeniffer_cloud">Jeniffer Cloud</string>
<string name="lbl_invite_people">Invite people</string>
<string name="msg_enter_the_cost">Enter the cost...</string>
<string name="msg_name_cannot_be">Name cannot be empty</string>
<string name="msg_mark_as_already">Mark as already paid</string>
<string name="lbl_create">Create</string>
<string name="msg_added_by_you_on">Added by you on 04/01/2023</string>
<string name="msg_see_design_guid">See design guideline</string>
<string name="lbl_appearence">Appearence</string>
<string name="lbl_sign_up">Sign up</string>
<string name="lbl_my_sweet_home">My sweet home</string>
<string name="lbl_name">Name</string>
<string name="lbl_czk">CZK</string>
<string name="lbl_profile">Profile</string>
<string name="lbl_150_k">150 kč</string>
<string name="lbl">*******</string>
<string name="lbl_privacy">Privacy</string>
<string name="msg_honza_nov_paid">Honza nový paid 6 700 kč</string>
<string name="msg_honza_nov_paid2">Honza Nový paid 532 kč</string>
<string name="lbl_nicol_thomas">Nicol Thomas</string>
<string name="msg_umm_those_were">UMM, those were delicious!</string>
<string name="lbl_invite">Invite</string>
<string name="lbl_jos">Jos</string>
<string name="lbl_sounds">Sounds</string>
<string name="lbl_email">Email</string>
<string name="msg_last_update_2">Last update: 2.1.2023</string>
<string name="msg_jeniffer_cloud2">Jeniffer Cloud owes 623 kč</string>
<string name="lbl_edit_expense">Edit expense</string>
<string name="lbl_0">0</string>
<string name="lbl_cupcakes">Cupcakes</string>
<string name="msg_another_one_65">Another one, 65 Downtown</string>
<string name="lbl_4">4</string>
<string name="msg_you_owe_money_i">You owe money in the household:
My sweet home</string>
<string name="msg_last_update_26">Last update: 26.3.2023</string>
<string name="msg_jeniffer_cloud">Jeniffer Cloud owes you:
120 kč</string>
<string name="lbl_login">Login</string>
<string name="lbl_25_west_valley">25 West Valley</string>
<string name="lbl_shares">shares</string>
<string name="lbl_thomas_rell">Thomas Rell</string>
<string name="lbl_indeed_jana">Indeed Jana</string>
<string name="lbl_0_00">0,00</string>
<string name="msg_enter_your_emai">Enter your email...</string>
<string name="msg_enter_your_login">Enter your login...</string>
<string name="msg_last_update_30">Last update: 30.3.2023</string>
<string name="msg_honza_nov_is_o">Honza Nový is owed:
150 kč</string>
<string name="lbl_17_00">17:00</string>
<string name="lbl_unequally">Unequally</string>
<string name="lbl_settings">Settings</string>
<string name="msg_temporary_home">Temporary home for cousin</string>
<string name="msg_household_invit">Household invite</string>
<string name="lbl_add_expense">Add expense</string>
<string name="lbl_josie_white">Josie White</string>
<string name="lbl_150">150</string>
<string name="lbl_remember_me">Remember me</string>
<string name="lbl_rent">Rent</string>
</resources>
