<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listavatars3davRowModel" type="com.anetsapplication.app.modules.addexpenseunequally.data.model.Listavatars3davRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearPerson"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <LinearLayout android:id="@+id/linearRowavatars3dav"
            android:layout_height="wrap_content"
            android:layout_weight="0.68" android:layout_width="0dp" android:orientation="horizontal">
            <ImageView android:id="@+id/imageAvatars3dav"
                android:layout_height="@dimen/_40pxh"
                android:layout_width="@dimen/_40pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_avatars3dav_88x88"
                tools:ignore="ContentDescription" tools:src="@drawable/img_avatars3dav_88x88"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtCristineOlive"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_11pxv"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_weight="0.68" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{listavatars3davRowModel.txtCristineOlive}"
                style="@style/txtRobotomedium14_3" tools:text="@string/lbl_cristine_olive"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowk"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10pxv"
            android:layout_marginStart="@dimen/_76pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_weight="0.32" android:layout_width="0dp" android:orientation="horizontal">
            <TextView android:ellipsize="end" android:id="@+id/txtK"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_weight="0.3" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@{listavatars3davRowModel.txtK}"
                style="@style/txtRobotomedium14_3" tools:text="@string/lbl_k"/>
            <TextView android:ellipsize="end" android:id="@+id/txtInput"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_9pxh"
                android:layout_weight="0.7" android:layout_width="0dp"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:paddingBottom="@dimen/_1pxv"
                android:paddingStart="@dimen/_10pxh"
                android:paddingTop="@dimen/_6pxv"
                android:singleLine="true"
                android:text="@{listavatars3davRowModel.txtInput}"
                style="@style/txtOutline" tools:text="@string/lbl_0_00"/>
        </LinearLayout>
    </LinearLayout>
</layout>
